--- a/wikinterests/interest_site/templates/interest_site/base.html
+++ b/wikinterests/interest_site/templates/interest_site/base.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'interest_site/main.css' %}" > {% endcomment %}
+    <link rel="stylesheet" type="text/css" href="{% static 'interest_site/main.css' %}" >
     {% if title %}
     <title>WiKiInTeRest - {{ title }}</title>
     {% else %}
@@ -25,17 +25,17 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{%url 'site-home' %}">Home</a>
-                {% comment %} <a class="nav-item nav-link" href="{%url 'site-about' %}">About</a> {% endcomment %}
+                <a class="nav-item nav-link" href="{%url 'site-about' %}">About</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                {% comment %} {% if user.is_authenticated %}
+                {% if user.is_authenticated %}
                   <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                   <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-                {% endif %} {% endcomment %}
+                {% endif %} 
               </div>
             </div>
           </div>
