Added 10 wikipedia random articles for homepage

--- a/wikinterests/interest_site/templates/interest_site/home.html
+++ b/wikinterests/interest_site/templates/interest_site/home.html
@@ -1,4 +1,8 @@
 {% extends "interest_site/base.html" %}
 {% block content %}
-
+{% for u, summary in articles.items %}
+    <div class="card">
+        {{summary|safe}}
+    </div>
+{% endfor %}
 {% endblock %}
