--- a/wikinterests/interest_site/templates/interest_site/home.html
+++ b/wikinterests/interest_site/templates/interest_site/home.html
@@ -1,8 +1,8 @@
 {% extends "interest_site/base.html" %}
 {% block content %}
-{% for u, summary in articles.items %}
+{% for article in articles %}
     <div class="card">
-        {{summary|safe}}
+        {{article|safe}}
     </div>
 {% endfor %}
 {% endblock %}
